[package]
name = "imgui-rs-vulkan-renderer"
description = "A Vulkan renderer for imgui-rs using Ash."
readme = "README.md"
keywords = ["imgui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
license = "MIT"
version = "1.12.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

exclude = ["assets/*", "compile_shaders.*"]

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
ash = { version = "0.38", default-features = false, features = ["debug"] }
ultraviolet = "0.9"

gpu-allocator = { version = "0.27", default-features = false, features = [
    "vulkan",
], optional = true }

vk-mem = { version = "0.4", optional = true }

[features]
dynamic-rendering = []

[dev-dependencies]
simple_logger = "4.0"
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = [
    "tables-api",
] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
ash = { version = "0.38", features = ["loaded"] }
ash-window = { version = "0.13.0" }
raw-window-handle = "0.6"
image = "0.25"
imgui-rs-vulkan-renderer = { path = ".", features = ["gpu-allocator"] }
